--- a/.qlxc.conf
+++ b/.qlxc.conf
@@ -1,3 +1,3 @@
 PACKAGES="ifupdown,less,locales,vim,dialog,isc-dhcp-client,netbase,net-tools,iproute,openssh-server"
-CACHE_DIR="${HOME}/.quick-lxc-deploy/cache"
-DEPLOY_DIR="${HOME}/.quick-lxc-deploy/deploy"
+CACHE_DIR="${HOME}/.qlxc/cache"
+DEPLOY_DIR="${HOME}/.qlxc/deploy"
